# 289-project

./: .gitignore  README.md  index.md  lesion_focused.ipynb  myst.yml  pyproject.toml  requirements.txt  segmentation_v2
binder/: postBuild  requirements.txt
metrics/: basic_cnn_lesion_white_test_metrics.csv  basic_cnn_test_metrics.csv  classification_bootstrap_metrics.csv  pad_ufes20_resnet_test_metrics.csv  pad_ufes_20_full_image_basic_cnn_metrics.csv  pad_ufes_20_full_image_ensemble_metrics.csv  pad_ufes_20_full_image_pretrained_resnet50_metrics.csv  pad_ufes_20_full_image_resnet_metrics.csv  pad_ufes_20_full_image_vit_metrics.csv  pad_ufes_20_lesion_white_basic_cnn_lesion_white_metrics.csv  pad_ufes_20_lesion_white_ensemble_metrics.csv  pad_ufes_20_lesion_white_pretrained_resnet50_lesion_white_metrics.csv  pad_ufes_20_lesion_white_resnet_lesion_white_metrics.csv  pad_ufes_20_lesion_white_vit_lesion_white_metrics.csv  pretrained_resnet50_lesion_white_test_metrics.csv  pretrained_resnet50_test_metrics.csv  resnet_lesion_white_test_metrics.csv  resnet_test_metrics.csv  segmentation_deeplabv3_resnet50_metrics.csv  vit_lesion_white_test_metrics.csv  vit_test_metrics.csv
notebooks/: 01_segmentation.ipynb  02_lesion_focused.ipynb
preds/: basic_cnn_binary_test_metrics.csv  basic_cnn_binary_test_predictions.csv  basic_cnn_lesion_white_test_metrics.csv  basic_cnn_lesion_white_test_predictions.csv  basic_cnn_test_metrics.csv  basic_cnn_test_predictions.csv  pad_ufes20_resnet_test_predictions.csv  pad_ufes_20_full_image_basic_cnn_predictions.csv  resnet_test_metrics.csv  (+20 more)
(+135 files in other folders)
