[project]
name = "289-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "torch>=2.11.0",
    "torchvision",
    "scipy>=1.13",
    "pillow>=10",
    "kagglehub",
    "wandb",
]
